--- a/cust/package.json
+++ b/cust/package.json
@@ -19,7 +19,7 @@
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "localhost:8000",
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
